sandbox-codebase/objects/heymarket__List_Message__c/heymarket__List_Message__c.object-meta.xml
<CustomObject>
    <label>List Message</label>
    <nameField>
        <label>List SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>