sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Content__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>