sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Error__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Error__c</fullName>
    <label>Error</label>
    <length>225</length>
    <type>Text</type>
</CustomField>