sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Execute_At__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Execute_At__c</fullName>
    <label>Execute At</label>
    <type>DateTime</type>
</CustomField>