sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Gallery__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Gallery__c</fullName>
    <label>Gallery</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>