sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Inbox_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Inbox_Id__c</fullName>
    <label>Inbox Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>