sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Members__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Members__c</fullName>
    <label>Members</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>