sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>