sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Selected_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Selected_Phone_Field__c</fullName>
    <label>Selected Phone Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>