sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Send_To_Whole_List__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Send_To_Whole_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Whole List</label>
    <type>Checkbox</type>
</CustomField>