sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Sf_List_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sf_List_Id__c</fullName>
    <label>Sf List Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>