sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Template__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>heymarket__Template__c</referenceTo>
    <relationshipLabel>List Messages</relationshipLabel>
    <relationshipName>List_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>