sandbox-codebase/objects/heymarket__List_Message__c/fields/heymarket__Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>