sandbox-codebase/objects/heymarket__List_Message__c/listViews/heymarket__All.listView-meta.xml
<ListView>
    <fullName>heymarket__All</fullName>
    <columns>NAME</columns>
    <columns>heymarket__Execute_At__c</columns>
    <columns>heymarket__Inbox_Id__c</columns>
    <columns>heymarket__Object_Name__c</columns>
    <columns>heymarket__Selected_Phone_Field__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>heymarket__Send_To_Whole_List__c</columns>
    <columns>heymarket__Sf_List_Id__c</columns>
    <columns>heymarket__Sf_List_Name__c</columns>
    <columns>heymarket__Status__c</columns>
    <columns>heymarket__Template__c</columns>
    <columns>heymarket__Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>